--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,15 +6,15 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to Login Page!</p>
+    <span>Welcome to Login Page!</span>
     <form method="post">
         <table>
             <tr>
-                <td><label>UserId</label></td>
+                <td><span>UserId</span></td>
                 <td><input type="text" name="userid" id="userid"></td>
             </tr>
             <tr>
-                <td><label>Password</label></td>
+                <td><span>Password</span></td>
                 <td><input type="password" name="password" id="password"></td>
             </tr>
         </table>
