--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,15 +9,15 @@
 <form method="post">
     <table>
         <tr>
-            <td><label>User Name</label></td>
+            <td><span>User Name</span></td>
             <td><input type="text" name="username"></td>
         </tr>
         <tr>
-            <td><label>UserId</label></td>
+            <td><span>UserId</span></td>
             <td><input type="text" name="userid"></td>
         </tr>
         <tr>
-            <td><label>Password</label></td>
+            <td><span>Password</span></td>
             <td><input type="password" name="password"></td>
         </tr>
     </table>
