--- a/views/user.ejs
+++ b/views/user.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1><%= title %></h1>
-    <p>Welcome to User Page!</p>
+    <span>Welcome to User Page!</span>
     <tr>
         <h2>Hello <%=userid%> !</h2>
     </tr>
